[fix] adjust font styling along the site
There was a bug with some type being too small, caused by a PR previously merged with some inconsistent styling. This also fixes the paragraph to use serif font by default (so we don’t need to specify this instruction all the time anymore within landing pages).

--- a/app/assets/stylesheets/redesign/base/_links.scss
+++ b/app/assets/stylesheets/redesign/base/_links.scss
@@ -27,7 +27,7 @@ a {
 .cta-link {
   font-family: $font-heading;
   font-style: italic;
-  font-size: 1.3rem;
+  font-size: 1em;
   border-bottom: 1px solid $c-neutral-6;
 }
 
